syntax = "proto3";

package moonbox;

option java_package = "moonbox.protocol.protobuf";
option java_multiple_files = true;

import public "common.proto";

message ResultDataPB {
    SchemaPB schema = 1;
    repeated RowPB row = 2;
}

message RowPB {
    repeated Value field = 1;
}

message Value {
    oneof kind {
        string string_value = 1;
        int64 long_value = 2;  // long, timestamp, date
        int32 int_value = 3;  // byte, short, int
        bool boolean_value = 4;
        bytes byte_array = 5;  // Array[Byte] and other java objects
        double double_value = 6;
        float float_value = 7;
        Decimal big_decimal = 8;
        Timestamp timestamp = 9;
        Struct struct_value = 10;
        ListValue list_value = 11;
        NullValue null_value = 12;
    }
}

message Decimal {
    bytes value = 1;
    int32 scale = 2;
    int32 precision = 3;
}

message Struct {
    map<string, Value> fields = 1;
}

message ListValue {
    repeated Value values = 1;
}

enum NullValue {
    // Null value.
    NULL_VALUE = 0;
}

message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}