syntax = "proto3";

package moonbox;

import "common.proto";

option java_package = "moonbox.protocol.protobuf";
option java_multiple_files = true;

message AccessRequestPB {
    string username = 1;
    string password = 2;
    string appType = 3;
}

message AccessResponsePB {
    HostPortPB host_port = 1;
}